--- a/src/Pages/Prices/Tekstolit/tekstolit.scss
+++ b/src/Pages/Prices/Tekstolit/tekstolit.scss
@@ -7,8 +7,49 @@
 	line-height: 1.875rem;
 	text-transform: uppercase;
 	color: $text-color;
-	padding: 25px 0 25px 10px;
+	padding: 25px 0 25px 0px;
 	border-bottom: 1px solid $btn_2-color;
+	display: flex;
+	gap: 5px;
+	div {
+		position: relative;
+		width: 25px;
+	}
+	div::after {
+		content: ' ';
+		width: 15px;
+		height: 2px;
+		background-color: #555;
+		position: absolute;
+		color: red;
+		left: 0;
+		top: 15px;
+		transform: rotate(45deg);
+	}
+	div::before {
+		content: ' ';
+		width: 15px;
+		height: 2px;
+		background-color: #555;
+		position: absolute;
+		color: red;
+		right: 0;
+		top: 15px;
+		transform: rotate(-45deg);
+	}
+}
+.price-item-head.active {
+	div {
+
+	}
+	div::after {
+		content: ' ';
+		transform: rotate(-45deg);
+	}
+	div::before {
+		content: ' ';
+		transform: rotate(45deg);
+	}
 }
 .price-item {
 	display: none;
