--- a/src/Pages/TextolitMain/textolitmain.scss
+++ b/src/Pages/TextolitMain/textolitmain.scss
@@ -14,3 +14,11 @@ th {
 	border-bottom: 1px solid $grey;
 	border-right: 1px solid $btn-color;
 }
+.list__text {
+	margin: 30px 0 20px 30px;
+	
+	li {
+		display: list-item;
+		padding: 10px;
+	}
+}
