--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -33,12 +33,14 @@ h2 {
 	font-size: 1.875rem;
 	line-height: 1.875rem;
 	color: $text-color;
+	padding: 15px 0 10px 0;
 }
 h3 {
 	font-weight: 400;
 	font-size: 1.875rem;
 	line-height: 1.875rem;
 	color: $text-color;
+	padding: 15px 0 10px 0;
 }
 p {
 font-weight: 300;
